Add some README.md content for everything but the front end, and some project-wide cleanup.  Also removed absolute paths from docker-compose.yml and it still seems to work.

--- a/docker-compose/dev/docker-compose.yml
+++ b/docker-compose/dev/docker-compose.yml
@@ -20,8 +20,8 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - '/Users/jordanheath/Development/Java/Examples/full-stack-reactive-demo/react-front-end:/app'
-      - '/Users/jordanheath/Development/Java/Examples/full-stack-reactive-demo/react-front-end/node_modules:/app/node_modules'
+      - '../../react-front-end:/app'
+      - '../../react-front-end/node_modules:/app/node_modules'
 
   webflux-back-end:
     container_name: webflux-back-end
