--- a/webflux-back-end/src/main/resources/application.yml
+++ b/webflux-back-end/src/main/resources/application.yml
@@ -7,7 +7,7 @@ server:
   shutdown: graceful
 
 ---
-# Docker-specific configuration - basically just addressing for the dockercompose.yml
+# Docker-specific configuration - basically just addressing for the docker-compose.yml
 spring:
   config:
     activate:
