--- a/mongo-database/pom.xml
+++ b/mongo-database/pom.xml
@@ -2,15 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>full-stack-reactive-demo</artifactId>
         <groupId>ca.purpleowl.examples.reactive</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
+    <artifactId>mongo-database</artifactId>
     <packaging>pom</packaging>
 
-    <artifactId>mongo-database</artifactId>
+    <name>MongoDB</name>
+    <description>A very simple POM used to orchestrate the build of a MongoDB Docker image</description>
 
     <profiles>
         <profile>
