--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <maven-resources-plugin.version>2.4.2</maven-resources-plugin.version>
         <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+        <spring-boot-maven-plugin.version>2.4.2</spring-boot-maven-plugin.version>
 
         <start-class/>
     </properties>
@@ -42,7 +43,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>2.4.0</version>
+                <version>2.4.2</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -150,7 +151,7 @@
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
-                    <version>${maven-resources-plugin.version}</version>
+                    <version>${spring-boot-maven-plugin.version}</version>
                     <executions>
                         <execution>
                             <id>repackage</id>
@@ -208,7 +209,7 @@
                         <dependency>
                             <groupId>org.springframework.boot</groupId>
                             <artifactId>spring-boot-maven-plugin</artifactId>
-                            <version>2.4.0</version>
+                            <version>${spring-boot-maven-plugin.version}</version>
                         </dependency>
                     </dependencies>
                     <executions>
